--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
         <link rel="stylesheet" href="style.css">
-        <title>Personel Portfolio Fatih</title>
+        <title>Fatih Enes</title>
     </head>
 
     <body>
