--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
         <link rel="stylesheet" href="style.css">
-        <title>Fatih Enes</title>
+        <title>Personel Portfolio Fatih</title>
     </head>
 
     <body>
@@ -186,9 +186,9 @@
             </div>
             <div class="column">
                 <h4>Contact</h4>
-                <a href>Contact Us</a>
-                <a href>Privicy Policy</a>
-                <a href>Terms & Conditions</a>
+                <a href="mailto:fatihenescoban5@gmail.com">Contact Us</a>
+                <a href="contact/privicy-policy.html">Privicy Policy</a>
+                <a href="coming-soon.html">Terms & Conditions</a>
             </div>
         </footer>
 
