--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
             <ul class="nav-links">
                 <li class="link"><a href="#">Home</a></li>
-                <li id="link1" class="link"><a href="#">Features</a></li>
-                <li id="link2" class="link"><a href="#">Pricing</a></li>
-                <li id="link2" class="link"><a href="#">About</a></li>
+                <li id="link1" class="link"><a href="#features">Features</a></li>
+                <li id="link2" class="link"><a href="#pricing">Pricing</a></li>
+                <li id="link2" class="link"><a href="#about">About</a></li>
             </ul>
             <button class="hire-btn"><a href="mailto:fatihenescoban5@gmail.com">Hire Me!</a></button>
         </nav>
@@ -93,7 +93,7 @@
         </section>
 
         <!-- --PRICING-- -->
-        <section class="container">
+        <section id="pricing" class="container">
             <h2 class="header">PROJECT PRICING PLANS</h2>
             <p class="sub-header">
                 Our pricing plans come with various membership tiers, each
@@ -156,7 +156,7 @@
         </section>
 
         <!-- --FOOTER-- -->
-        <footer class="container">
+        <footer id="about" class="container">
             <span class="blur"></span>
             <span class="blur"></span>
             <div class="column">
