--- a/index.html
+++ b/index.html
@@ -174,21 +174,21 @@
             </div>
             <div class="column">
                 <h4>Company</h4>
-                <a href>Business</a>
-                <a href>Partnership</a>
-                <a href>Network</a>
+                <a href="coming soon/coming-soon.html">Business</a>
+                <a href="coming soon/coming-soon.html">Partnership</a>
+                <a href="coming soon/coming-soon.html">Network</a>
             </div>
             <div class="column">
                 <h4>About Us</h4>
-                <a href>Blogs</a>
-                <a href>Channels</a>
-                <a href>Sponsors</a>
+                <a href="coming soon/coming-soon.html">Blogs</a>
+                <a href="coming soon/coming-soon.html">Channels</a>
+                <a href="coming soon/coming-soon.html">Sponsors</a>
             </div>
             <div class="column">
                 <h4>Contact</h4>
                 <a href="mailto:fatihenescoban5@gmail.com">Contact Us</a>
                 <a href="contact/privicy-policy.html">Privicy Policy</a>
-                <a href="coming-soon.html">Terms & Conditions</a>
+                <a href="coming soon/coming-soon.html">Terms & Conditions</a>
             </div>
         </footer>
 
