--- a/index.html
+++ b/index.html
@@ -19,27 +19,29 @@
             </div>
 
             <ul class="nav-links">
-                <li class="link"><a href="#">Home</a></li>
+                <li class="link"><a href="#home">Home</a></li>
                 <li id="link1" class="link"><a href="#features">Features</a></li>
                 <li id="link2" class="link"><a href="#pricing">Pricing</a></li>
                 <li id="link2" class="link"><a href="#about">About</a></li>
             </ul>
-            <button class="hire-btn"><a href="mailto:fatihenescoban5@gmail.com">Hire Me!</a></button>
+            <button class="hire-btn"><a href="mailto:fatihenescoban5@gmail.com">Hire
+                    Me!</a></button>
         </nav>
 
         <!-- --CONTENT-- -->
         <header class="container">
-            <div class="content">
+            <div id="home" class="content">
                 <span class="blur"></span>
                 <span class="blur"></span>
                 <h4>CREATE YOUR SITE LIKE A PROFESSIONAL</h4>
                 <h1>Hi, I'm <span>Enes</span>, Web and Backend Developer</h1>
-                <p>Hello, I'm Fatih Enes. I'm 20 years old and I'm into coding. I
+                <p>Hello, I'm Fatih Enes. I'm 20 years old and I'm into coding.
+                    I
                     love learning new things. I've been working in backend and
                     web development for about 6 years. My favorite programming
                     languages are Java and Python.</p>
-                    <button class="hire-btn"><a href="#features">Get Started</a></button>
-                    
+                <button class="hire-btn"><a href="#features">Get Started</a></button>
+
             </div>
             <div class="image">
                 <img src="images/header.png">
@@ -86,7 +88,7 @@
                     <p>
                         You want we work together? Just write email to us.
                     </p>
-                    <a href="mailto:fatihenescoban5@gmail.com">Join Now <i
+                    <a href="mailto:fatihenescoban5@gmail.com">Contact Me <i
                             class="ri-arrow-right-fill"></i></a>
                 </div>
             </div>
@@ -104,7 +106,7 @@
                 <div class="card">
                     <div class="content">
                         <h4>Portfolio Website (Basic)</h4>
-                        <h3>25$</h3>
+                        <h3>80$</h3>
                         <p>
                             <i class="ri-checkbox-circle-line"></i>
                             Ready template
@@ -114,13 +116,15 @@
                             2 hour delivery
                         </p>
                     </div>
-                    <button class="btn">Join Now</button>
+                    <button class="btn buy-btn">
+                        <a href="https://www.fiverr.com/fatihenes/build-personel-portfolia-website-for-you">Buy Now</a>
+                    </button>                    
                 </div>
 
                 <div class="card">
                     <div class="content">
                         <h4>Portfolio Website (Gold)</h4>
-                        <h3>50$</h3>
+                        <h3>105$</h3>
                         <p>
                             <i class="ri-checkbox-circle-line"></i>
                             Custom website
@@ -130,13 +134,17 @@
                             Delivery within two days
                         </p>
                     </div>
-                    <button class="btn">Join Now</button>
+                    <button class="btn buy-btn">
+                        <a
+                            href="https://www.fiverr.com/fatihenes/build-personel-portfolia-website-for-you">Buy
+                            Now</a>
+                    </button>
                 </div>
 
                 <div class="card">
                     <div class="content">
                         <h4>Portfolio Website (Diamond)</h4>
-                        <h3>60$</h3>
+                        <h3>130$</h3>
                         <p>
                             <i class="ri-checkbox-circle-line"></i>
                             Custom website
@@ -150,7 +158,11 @@
                             Delivery within two days
                         </p>
                     </div>
-                    <button class="btn">Join Now</button>
+                    <button class="btn buy-btn">
+                        <a
+                            href="https://www.fiverr.com/fatihenes/build-personel-portfolia-website-for-you">Buy
+                            Now</a>
+                    </button>
                 </div>
             </div>
         </section>
@@ -167,9 +179,13 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </p> -->
                 <div class="socials">
-                    <a href="https://www.linkedin.com/in/fatih-enes-%C3%A7oban-55aa23245/"><i class="ri-linkedin-box-line"></i></a>
-                    <a href="https://github.com/Reines5"><i class="ri-github-line"></i></a>
-                    <a href="https://twitter.com/freines5"><i class="ri-twitter-line"></i></a>
+                    <a
+                        href="https://www.linkedin.com/in/fatih-enes-%C3%A7oban-55aa23245/"><i
+                            class="ri-linkedin-box-line"></i></a>
+                    <a href="https://github.com/Reines5"><i
+                            class="ri-github-line"></i></a>
+                    <a href="https://twitter.com/freines5"><i
+                            class="ri-twitter-line"></i></a>
                 </div>
             </div>
             <div class="column">
@@ -196,28 +212,8 @@
             Copyright © 2023 Fatih Enes. All Rights Reserved.
         </div>
 
-        <!-- <script src="script.js"></script> -->
-
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script>
-            $(document).ready(function () {
-                $("a[href^='#']").on("click", function (event) {
-                    event.preventDefault();
-                    var hash = this.hash;
-                    $("html, body").animate(
-                        {
-                            scrollTop: $(hash).offset().top,
-                        },
-                        800, // Adjust the scrolling speed if needed
-                        function () {
-                            window.location.hash = hash;
-                        }
-                    );
-                });
-            });
-        </script>
+        <script src="script.js"></script>
 
-          
     </body>
-
 </html>
