--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                         You have any problem on your codes? I'll help you fix
                         it.
                     </p>
-                    <a href="#">Join Now <i class="ri-arrow-right-fill"></i></a>
+                    <a href="mailto:fatihenescoban5@gmail.com">Contact Me <i
+                            class="ri-arrow-right-fill"></i></a>
                 </div>
 
                 <!-- <div class="card">
@@ -117,8 +118,10 @@
                         </p>
                     </div>
                     <button class="btn buy-btn">
-                        <a href="https://www.fiverr.com/fatihenes/build-personel-portfolia-website-for-you">Buy Now</a>
-                    </button>                    
+                        <a
+                            href="https://www.fiverr.com/fatihenes/build-personel-portfolia-website-for-you">Buy
+                            Now</a>
+                    </button>
                 </div>
 
                 <div class="card">
