--- a/contact/privicy-policy.html
+++ b/contact/privicy-policy.html
@@ -31,7 +31,11 @@
                 <span class="blur"></span>
                 <button class="btn"><a href="../index.html"><i
                             class="ri-arrow-left-s-fill"></i>Go Back</a></button>
-                <h1>Privacy Policy</h1>
+                
+                            <br>
+                            <br>
+
+                            <h1>Privacy Policy</h1>
                 <p>Last updated: August 23, 2023</p>
                 <p>This Privacy Policy describes Our policies and procedures on
                     the
@@ -582,9 +586,21 @@
                     <li>By email: fatihenescoban5@gmail.com</li>
                 </ul>
 
+                <br>
+                <br>
+                <br>
+                
+                <button class="btn"><a href="../index.html"><i
+                            class="ri-arrow-left-s-fill"></i>Go Back</a></button>
+
                 <span class="blur"></span>
                 <span class="blur"></span>
             </div>
         </header>
+
+        <div class="copyright">
+            Copyright © 2023 Fatih Enes. All Rights Reserved.
+        </div>
+
     </body>
 </html>
