--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             class="ri-twitter-line"></i></a>
                 </div>
             </div>
-            <div class="column">
+            <!-- <div class="column">
                 <h4>Company</h4>
                 <a href="coming soon/coming-soon.html">Business</a>
                 <a href="coming soon/coming-soon.html">Partnership</a>
@@ -201,12 +201,12 @@
                 <a href="coming soon/coming-soon.html">Blogs</a>
                 <a href="coming soon/coming-soon.html">Channels</a>
                 <a href="coming soon/coming-soon.html">Sponsors</a>
-            </div>
+            </div> -->
             <div class="column">
                 <h4>Contact</h4>
                 <a href="mailto:fatihenescoban5@gmail.com">Contact Us</a>
                 <a href="contact/privicy-policy.html">Privicy Policy</a>
-                <a href="coming soon/coming-soon.html">Terms & Conditions</a>
+                <a href="contact/terms.html">Terms & Conditions</a>
             </div>
         </footer>
 
